# MalaCryptor

./: Makefile.am  PKG_CONFIG_PATH_MINGW.sh  README.md  configure.ac  meson.build
lib/: note.txt
lib/gnu_linux/: note.txt
lib/win/: note.txt
src/: file_sym_enc.c  file_sym_enc.h  key_derive.c  key_derive.h  key_file.c  key_file.h  m_string.c  m_string.h  m_string_get_string.c  m_string_get_string.h  mala_cryptor.c
tests/: mala_cryptor-tests.c  mala_cryptor-tests.h
